--- a/packages/repositories.config
+++ b/packages/repositories.config
@@ -1,5 +1,2 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
-<repositories>
-  <repository path="..\Samples\WrapClient\packages.config" />
-  <repository path="..\Thinktecture.IdentityModel.Web\packages.config" />
-</repositories>
+<repositories />
